[gd_scene load_steps=45 format=2]

[ext_resource path="res://Scenes/ZombieScenes/SpeedComponent.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Audio/zombie-bite-96528.mp3" type="AudioStream" id=2]
[ext_resource path="res://Assets/Zombies/Summoner 46x 44.png" type="Texture" id=3]
[ext_resource path="res://Scenes/ZombieScenes/AttackComponent.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Zombies/DancerZombie.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Zombies/SummonComponent.gd" type="Script" id=6]
[ext_resource path="res://Scenes/ZombieScenes/HealthComponent.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Audio/ZombieHit.mp3" type="AudioStream" id=8]
[ext_resource path="res://Assets/Zombies/Summoner-SheetWEB.png" type="Texture" id=9]
[ext_resource path="res://Scripts/Zombies/ZombieSpriteComponent.gd" type="Script" id=10]
[ext_resource path="res://Scenes/ZombieScenes/ComponentManager.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Shaders/basicZombieHitShader.tres" type="Shader" id=12]

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 11.5, 19 )

[sub_resource type="ShaderMaterial" id=32]
shader = ExtResource( 12 )
shader_param/target_color = null
shader_param/replace_color = null
shader_param/tolerance = null

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 176, 46, 44 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 46, 176, 46, 44 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 92, 176, 46, 44 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 138, 176, 46, 44 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 184, 176, 46, 44 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 230, 176, 46, 44 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 276, 176, 46, 44 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 322, 176, 46, 44 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 88, 46, 44 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 46, 88, 46, 44 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 92, 88, 46, 44 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 138, 88, 46, 44 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 184, 88, 46, 44 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 230, 88, 46, 44 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 276, 88, 46, 44 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 322, 88, 46, 44 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 368, 88, 46, 44 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 0, 44, 46, 44 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 46, 44, 46, 44 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 92, 44, 46, 44 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 138, 44, 46, 44 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 184, 44, 46, 44 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 230, 44, 46, 44 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 9 )
region = Rect2( 322, 0, 46, 44 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 9 )
region = Rect2( 368, 0, 46, 44 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 9 )
region = Rect2( 414, 0, 46, 44 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 9 )
region = Rect2( 460, 0, 46, 44 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 9 )
region = Rect2( 506, 0, 46, 44 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 9 )
region = Rect2( 552, 0, 46, 44 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": false,
"name": "Summon",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "WebWalk",
"speed": 5.0
} ]

[node name="DancerZombie" type="Area2D" groups=["Zombie"]]
collision_layer = 2
script = ExtResource( 5 )

[node name="ComponentManager" parent="." instance=ExtResource( 11 )]

[node name="HealthComponent" parent="." instance=ExtResource( 7 )]

[node name="SpeedComponent" parent="." instance=ExtResource( 1 )]
speed = 15

[node name="AttackComponent" parent="." instance=ExtResource( 4 )]

[node name="HurtBoxComponent" type="CollisionShape2D" parent="."]
position = Vector2( 6.5, 3 )
shape = SubResource( 25 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 32 )
frames = SubResource( 24 )
animation = "Walk"
playing = true
script = ExtResource( 10 )

[node name="SummonComponent" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="SummonPoint1" type="Node2D" parent="SummonComponent"]
position = Vector2( -32, -32 )

[node name="SummonPoint2" type="Node2D" parent="SummonComponent"]
position = Vector2( 0, -32 )

[node name="SummonPoint3" type="Node2D" parent="SummonComponent"]
position = Vector2( 32, -32 )

[node name="SummonPoint4" type="Node2D" parent="SummonComponent"]
position = Vector2( -32, 0 )

[node name="SummonPoint6" type="Node2D" parent="SummonComponent"]
position = Vector2( 32, 0 )

[node name="SummonPoint7" type="Node2D" parent="SummonComponent"]
position = Vector2( -32, 32 )

[node name="SummonPoint8" type="Node2D" parent="SummonComponent"]
position = Vector2( 0, 32 )

[node name="SummonPoint9" type="Node2D" parent="SummonComponent"]
position = Vector2( 32, 32 )

[node name="SummonTimer" type="Timer" parent="SummonComponent"]
wait_time = 5.0
autostart = true

[node name="AttackTimer" type="Timer" parent="."]

[node name="DMGRayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -28, 0 )
collide_with_areas = true

[node name="HitAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="AttackAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[connection signal="animation_finished" from="AnimatedSprite" to="SummonComponent" method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="SummonComponent/SummonTimer" to="SummonComponent" method="_on_SummonTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="AttackComponent" method="_on_AttackTimer_timeout"]
